# linux-goose

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Goose.hpp
src/: CMakeLists.txt  Goose.cpp  Goose.hpp  main.cpp
